[squash]: Fix filmstripOnly property, remove important from css

--- a/css/_vertical_filmstrip_overrides.scss
+++ b/css/_vertical_filmstrip_overrides.scss
@@ -79,9 +79,9 @@
             height: auto;
             justify-content: flex-end;
 
-            .remote-videos-container {
+            #filmstripRemoteVideosContainer {
                 flex-direction: column-reverse;
-                overflow-x: hidden !important;
+                overflow-x: hidden;
             }
         }
 
